fixes #5832 - org switcher does not collapse when moving mouse diagnally to submenu

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -45,10 +45,6 @@ $navbar-default-bg: $primary_color;
   overflow-y: auto;
 }
 
-.dropdown-submenu:hover > .dropdown-menu {
-  display:block;
-}
-
 .dropdown-submenu > a:after {
   display:block;content:" ";
   float:right;
